--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,8 @@
     "stdarg.h": "c",
     "libft.h": "c",
     "limits.h": "c",
-    "random": "c"
+    "random": "c",
+    "unistd.h": "c",
+    "stdio.h": "c"
   }
 }
